first steps of migratiofirst steps of migrationn